kubernetes/argocd/applications/shader-thing/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shader-thing
  labels:
    app: shader-thing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shader-thing
  template:
    metadata:
      labels:
        app: shader-thing
    spec:
      containers:
      - name: shader-thing
        image: registry.digitalocean.com/kubeden/shader-thing:latest
        ports:
        - containerPort: 80
