kubernetes/argocd/applications/shader-thing/service.yml
apiVersion: v1
kind: Service
metadata:
  name: shader-thing-service
spec:
  selector:
    app: shader-thing
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
